fix: align

--- a/src/components/Sections/AboutMeSection/styles.module.css
+++ b/src/components/Sections/AboutMeSection/styles.module.css
@@ -18,7 +18,6 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
-    margin: 0;
 }
 
 
@@ -36,5 +35,6 @@
 @media(min-width: 45.375rem){
     .aboutMeSection p {
         margin-left: 4.375rem;
+        margin-top: 0;
     }
 }
